--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "echarts": "^4.9.0",
     "ej-angular2": "^18.3.35",
     "express": "^4.17.1",
+    "file-saver": "^2.0.5",
     "hammerjs": "^2.0.8",
     "howler": "^2.2.1",
     "html2canvas": "^1.0.0-rc.7",
     "jquery": "^3.5.0",
     "jspdf": "^2.3.1",
     "jspdf-autotable": "^3.5.13",
+    "jszip": "^3.10.1",
     "material-design-icons": "^3.0.1",
     "moment": "^2.29.1",
     "ng-material-datetimepicker": "^1.19.6",
@@ -67,6 +69,7 @@
     "@angular/language-service": "^7.2.16",
     "@types/echarts": "^4.9.1",
     "@types/ej.web.all": "^18.2.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "^2.8.17",
     "@types/jasminewd2": "^2.0.8",
     "@types/jquery": "^3.5.3",
